Improved design, scrolling animation for navbar, new background, still issue w/ scrollbar bottom having a white rectangle

--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,19 @@ body {
 #navbar {
     font-family: "Quicksand", sans-serif;
     background-color: #ffffff;
-    text-transform: capitalize;
+    top: 0;
+    /* text-transform: capitalize; */
     color: black;
-    box-shadow: 0px 2px 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    width: 100%;
+    overflow: hidden;
+    transition: 0.3s;
+    position: fixed;
+    /* box-shadow: 0px 2px 10px; */
+    /* border-radius: 10px 10px 0 0; */
+    z-index: 1;
 }
 .underline {
     text-decoration: underline;
@@ -37,19 +47,33 @@ body {
     height: 100px;
     width: 40px;
     background-size: 40px 100px;
+    margin-left: 1%;
+    transition: 0.3s;
 }
 .wrap { 
+    top: 0;
+    backdrop-filter: url(commonfilters.svg#filter);
+    backdrop-filter: blur(5px);
     font-family: "Inter", sans-serif;
     font-size: 14px;
-    background-color: #ffffff94;
-    height: 100%; 
-    width: 100%;
+    background-color: #f9f9f980;
+    height: 100%;
+    margin-bottom: 0px;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     overflow: scroll;
     position: relative;
     padding: 50px;
     line-height: 2;
+    z-index: 0;
+}
+
+#map-container{
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 ::-webkit-scrollbar {   
@@ -58,7 +82,6 @@ body {
 ::-webkit-scrollbar-track {
     background: #00000000;
 }
-  
 ::-webkit-scrollbar-thumb {
     border-radius: 30px;
     background: #75757580;
@@ -73,7 +96,8 @@ body {
     right: 0;
     bottom: 0;
     background: url('bg-img.jpg') no-repeat center center;
-    background-size: cover;
+    /* background-position: 0% -200%; */
+    /* background-size: 70%; */
     z-index: -1;
     will-change: transform;
     background-size: cover;
